💄 Remove extra newlines between list items causing layout issues

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -198,11 +198,3 @@ article {
     text-transform: none;
   }
 }
-
-ul {
-  li {
-    p {
-      display: inline;
-    }
-  }
-}
